# gloss

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/software-design-philosophy/: SKILL.md
corpora/aposd/: .gitkeep  cases.yaml  profile.py  prompt.md  taxonomy.yaml
docs/: ARCHITECTURE.md  BUILDS.md  CLI.md  DESIGN.md  STARTUP_GUIDE.md  TESTING.md
docs/superpowers/notes/: 2026-06-10-corpus-generation-prompts.md  2026-06-10-full-book-build-handoff.md  2026-06-10-naming.md  2026-06-10-session-handoff.md  2026-06-10-taxonomy-reconciliation.md
docs/superpowers/plans/: 2026-06-10-aposd-embedded.md  2026-06-10-aposd-full-book-build.md
docs/superpowers/specs/: 2026-06-10-aposd-embedded-design.md
src/gloss/: __init__.py  build.py  cli.py  enrich.py  evalrun.py  extract.py  parse.py  profile.py  segment.py  store.py  taxonomy.py
tests/: conftest.py  test_build.py  test_cli.py  test_enrich.py  test_eval.py  test_extract.py  test_parse.py  test_segment.py  test_stdlib_contract.py  test_store.py  test_taxonomy.py
